[package]
edition = "2021"
name    = "test_noise"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[dependencies]
bracket-bevy  = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-noise = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }

bevy                = "0.8"
bevy-inspector-egui = "0.13"
noisy_bevy          = "0.1"

clap       = { version = "4", features = ["derive"] }
sark_grids = "0.5"

ndarray = "0.15.6"
noise   = "0.8"

bevy_egui = "0.16"
